<resources>
    <string name="app_name" translatable="false">Sathé</string>
    <string-array name="genres">
        <item>Action</item>
        <item>Thriller</item>
        <item>Romance</item>
        <item>Horror</item>
        <item>Fantasy</item>
        <item>Science Fiction</item>
    </string-array>
    <string name="films">Movies</string>
    <string name="contact">Contact</string>
    <string name="title_activity_cinema_about" translatable="false">Sathé</string>
    <string name="myTickets">My tickets</string>
    <string name="name">Name</string>
    <string name="city">City</string>
    <string name="adress">Adress</string>
    <string name="zipcode">Zipcode</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="colon" translatable="false">: </string>
    <string name="cinemaName" translatable="false">Sathé</string>
    <string name="cinemaCity" translatable="false">Breda</string>
    <string name="cinemaAdress" translatable="false">Lovensdijkstraat 61</string>
    <string name="cinemaZipcode" translatable="false">4818 AJ</string>
    <string name="cinemaPhoneNumber" translatable="false">088-5257500</string>
    <string name="cinemaEmailAdress" translatable="false">sathé@sathe.nl</string>
    <string name="lorem" translatable="false">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui.</string>

    <string name="filmTitle">Film title</string>
    <string name="order">Order tickets</string>
    <string name="chooseTickets">Choose Tickets</string>
    <string name="time">Time: </string>
    <string name="chairAmount">Amount of chairs: </string>
    <string name="proceed">Proceed</string>
    <string name="a_chair_description">Choose a seat by tapping the buttons above, the bar above the seats is a representation of the movie screen.</string>
    <string name="reviews">Reviews: </string>
    <string name="author">Author:</string>

    <string name="payment_description">Which payment option do you wish to use?</string>
    <string name="iDeal" translatable="false">iDeal</string>
    <string name="PayPal" translatable="false">PayPal</string>
    <string name="CreditCard" translatable="false">CreditCard</string>
    <string name="euro" translatable="false">€</string>
    <string name="confirm">confirm</string>
    <string name="payment_chosen" translatable="false">Paying with iDeal requires you to input your bank account owner\'s name and number.</string>

    <string name="payment_confirm_button" translatable="false">OK</string>
    <string name="payment_confirm_text">Payment successful. Tap the 3 dots in the top right corner and go to \'My tickets\' to see your tickets or tap the \'OK\' button to go back to movies.</string>
    <string name="payment_fail_button">Back</string>
    <string name="payment_fail_text">Payment failed.</string>

    <string name="openingHours">Opening hours</string>
    <string name="hours">"Every day from 11:00 to 02:00 "</string>
    <string name="accesibility">Parking : Follow claudiusprinsenlaan, park on lovensdijkstraat</string>
</resources>
