<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.stijn.sath.gui.CinemaAboutActivity">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        map:layout_constraintBottom_toBottomOf="parent"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:context="com.example.stijn.sath.gui.CinemaAboutActivity" />

    <TextView
        android:id="@+id/contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/contact"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact" />

    <TextView
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/city"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/adress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/adress"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city" />

    <TextView
        android:id="@+id/zipcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="8dp"
        android:text="@string/zipcode"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adress" />

    <TextView
        android:id="@+id/phoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="8dp"
        android:text="@string/phone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zipcode" />

    <TextView
        android:id="@+id/emailAdress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="8dp"
        android:text="@string/email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumber" />

    <TextView
        android:id="@+id/colon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/colon"
        app:layout_constraintStart_toEndOf="@+id/name"
        tools:layout_editor_absoluteY="41dp"
        app:layout_constraintTop_toTopOf="@id/name"/>

    <TextView
        android:id="@+id/colon1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/colon"
        app:layout_constraintStart_toEndOf="@+id/city"
        tools:layout_editor_absoluteY="41dp"
        app:layout_constraintTop_toTopOf="@id/city"/>

    <TextView
        android:id="@+id/colon2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/colon"
        app:layout_constraintStart_toEndOf="@+id/adress"
        tools:layout_editor_absoluteY="60dp"
        app:layout_constraintTop_toTopOf="@id/adress"/>

    <TextView
        android:id="@+id/colon3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/colon"
        app:layout_constraintStart_toEndOf="@+id/zipcode"
        tools:layout_editor_absoluteY="78dp"
        app:layout_constraintTop_toTopOf="@+id/zipcode"/>

    <TextView
        android:id="@+id/colon4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/colon"
        app:layout_constraintStart_toEndOf="@+id/phoneNumber"
        tools:layout_editor_absoluteY="78dp"
        app:layout_constraintTop_toTopOf="@+id/phoneNumber"/>
    <TextView
        android:id="@+id/colon5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/colon"
        app:layout_constraintStart_toEndOf="@+id/emailAdress"
        tools:layout_editor_absoluteY="78dp"
        app:layout_constraintTop_toTopOf="@+id/emailAdress"/>

    <TextView
        android:id="@+id/nameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/cinemaName"
        app:layout_constraintStart_toEndOf="@+id/colon"
        app:layout_constraintTop_toTopOf="@id/name" />

    <TextView
        android:id="@+id/cityInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/cinemaCity"
        app:layout_constraintStart_toEndOf="@+id/colon1"
        app:layout_constraintTop_toTopOf="@id/city"  />

    <TextView
        android:id="@+id/adressInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/cinemaAdress"
        app:layout_constraintStart_toEndOf="@+id/colon2"
        app:layout_constraintTop_toTopOf="@id/adress"  />

    <TextView
        android:id="@+id/zipcodeInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/cinemaZipcode"
        app:layout_constraintStart_toEndOf="@+id/colon3"
         app:layout_constraintTop_toTopOf="@+id/zipcode"/>

    <TextView
        android:id="@+id/phoneNumberInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/cinemaPhoneNumber"
        app:layout_constraintStart_toEndOf="@+id/colon4"
        tools:layout_editor_absoluteY="78dp"
        app:layout_constraintTop_toTopOf="@+id/phoneNumber"/>

    <TextView
        android:id="@+id/emailAdressInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/cinemaEmailAdress"
        app:layout_constraintStart_toEndOf="@+id/colon5"
        tools:layout_editor_absoluteY="78dp"
        app:layout_constraintTop_toTopOf="@+id/emailAdress"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="110dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailAdressInput">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/exterior" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/cafe" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/chair" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
